--- a/WebAPI/wwwroot/index.html
+++ b/WebAPI/wwwroot/index.html
@@ -3,11 +3,22 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
+    <link href="./lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet"/>
+    <link href="./lib/bootstrap/dist/css/bootstrap-theme.css" rel="stylesheet"/>
 </head>
 <body>
-
-    :OO!!!!
-
+    <!-- nav -->
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">
+                    <img alt="Brand" src="./res/logo.ico" style="height: 28px; width: 28px;">
+                </a>
+            </div>
+        </div>
+    </nav>
+    <!-- nav -->
+    midsection blablablab
     <div data-bind="text: out"></div>
 
     <div data-bind="foreach: p">
@@ -15,7 +26,11 @@
             <div data-bind="text: title"></div>
         </a>
     </div>
-
-    <script data-main="js/main" src="lib/requirejs/require.js"></script>
+    <!-- footer -->
+    <div class="panel panel-default">
+        <div class="panel-footer">Footer</div>
+    </div>
+    <!-- footer -->
+<script data-main="js/main" src="/lib/requirejs/require.js"></script>
 </body>
 </html>
