--- a/WebAPI/wwwroot/index.html
+++ b/WebAPI/wwwroot/index.html
@@ -7,17 +7,38 @@
     <link href="./lib/bootstrap/dist/css/bootstrap-theme.css" rel="stylesheet"/>
 </head>
 <body>
-    <!-- nav -->
+    <!----> 
     <nav class="navbar navbar-default">
         <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
                 <a class="navbar-brand" href="#">
-                    <img alt="Brand" src="./res/logo.ico" style="height: 28px; width: 28px;">
+                    <img src="./res/logo.ico" style="height: 28px; width: 28px;"/>
                 </a>
             </div>
-        </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li><a href="#">Force Network</a></li>
+                    <li><a href="#">Statistics</a></li>
+                </ul>
+                <form class="navbar-form navbar-left">
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Search for posts">
+                    </div>
+                    <button type="submit" class="btn btn-default">Search</button>
+                </form>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
     </nav>
-    <!-- nav -->
+    <!---->
     midsection blablablab
     <div data-bind="text: out"></div>
 
