added marking functionality

--- a/WebAPI/wwwroot/index.html
+++ b/WebAPI/wwwroot/index.html
@@ -40,6 +40,9 @@
     </nav>
     <!---->
     midsection blablablab
+
+    <div data-bind="component: QA"></div>
+
     <div data-bind="text: out"></div>
 
     <div data-bind="foreach: p">
