successfully integrated google charts via. loader.js file. Testing with example graph

--- a/WebAPI/wwwroot/index.html
+++ b/WebAPI/wwwroot/index.html
@@ -40,6 +40,8 @@
     </nav>
     <!---->
     midsection blablablab
+    <div data-bind="component: statistics"></div>
+
     <div data-bind="text: out"></div>
 
     <div data-bind="foreach: p">
