--- a/WebAPI/wwwroot/index.html
+++ b/WebAPI/wwwroot/index.html
@@ -5,6 +5,7 @@
     <title></title>
     <link href="./lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet"/>
     <link href="./lib/bootstrap/dist/css/bootstrap-theme.css" rel="stylesheet"/>
+    <link href="lib/jqcloud2/dist/jqcloud.css" rel="stylesheet" />
 </head>
 <body>
     <!----> 
