--- a/WebAPI/wwwroot/index.html
+++ b/WebAPI/wwwroot/index.html
@@ -40,7 +40,7 @@
     </nav>
     <!---->
 
-    <div data-bind="component: { name: main, params: { searchString: searchField() } }"></div>
+    <div data-bind="component: { name: main, params: {args: componentParams} }"></div>
 
     <!-- footer -->
     <div class="panel panel-default">
