--- a/WebAPI/wwwroot/index.html
+++ b/WebAPI/wwwroot/index.html
@@ -41,8 +41,9 @@
     </nav>
     <!---->
 
-    <div data-bind="component: { name: main, params: {args: componentParams} }"></div>
-
+    <div clas="container">
+        <div data-bind="component: { name: main, params: {args: componentParams} }"></div>
+    </div>
     <!-- footer -->
     <div class="panel panel-default">
         <div class="panel-footer">Footer</div>
