basic coloring added

--- a/WebAPI/wwwroot/index.html
+++ b/WebAPI/wwwroot/index.html
@@ -6,6 +6,7 @@
     <link href="./lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet"/>
     <link href="./lib/bootstrap/dist/css/bootstrap-theme.css" rel="stylesheet"/>
     <link href="lib/jqcloud2/dist/jqcloud.css" rel="stylesheet" />
+    <link href="css/site.css" rel="stylesheet"/>
 </head>
 <body>
     <!----> 
